@@ -35,6 +35,17 @@
 <div class="document">
 
 
+<p>2013-04-28  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>design/pixel-cache-struct.dot: Update structure relationships
+diagram.</li>
+<li>design/pixel-cache.dot: Update call flow diagram.</li>
+<li>magick/pixel_cache.c: Eliminate use of internal functions
+GetNexusIndexes(), GetNexusPixels().  Reduce usage of internal
+function IsNexusInCore().</li>
+</ul>
+</blockquote>
 <p>2013-04-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
